# syncplay

./: .appveyor.yml  .gitignore  .travis.yml  Allow_player_arguments_with_spaces_quotes_(#665).patch  Dockerfile  GNUmakefile  MANIFEST.in  Makefile  README.md  Readiness_override_(initial_implementation).patch  appdmg.py  bintray.json  bintray_version.py  build.spec  buildInstaller.py  buildPy2app.py  buildPy2exe  buildPy2exe.py  build_legacy.sh  common_functions.py  mpc.py  mplayer.py  pyinstaller-client.spec  pyinstaller-onedir.spec  pyinstaller-onefile.spec  pyinstaller-server.spec  pyproject.toml  requirements.py  requirements.txt  requirements_gui.txt  requirements_tls.txt  run_sync_server.py  run_test_server.py  server.crt  server.key  server.pem  setup.cfg  setup.nsi  setup.py  setup.py2  (+15 more)
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  pythonpackage.yml
ci/: appimage-deploy.sh  appimage-script.sh  deb-installation-test.sh  deb-script.sh  deb-server-script.sh  macos-deploy.sh  macos_app_adhoc_sign.py  macos_app_arch_check.py  macos_app_cleaner.py  pyside2_linker.py  win-create-nsis.py
docs/: syncplay-server.1  syncplay.1
resources/: icon.icns  license.rtf  license.txt  macOS_dmg_bkg.tiff  macos_vlc_install.command  syncplay-server.desktop  syncplay.desktop  syncplay.lua  syncplayClientForceConfiguration.bat  syncplayintf.lua  third-party-notices.rtf  third-party-notices.txt  win_lua_note.txt
resources/lua/intf/: syncplay.lua
resources/man/: changelog.md  download.md  main.md  main_instructions.md  technical.md
syncplay/: ConfigurationGetter.py  SyncplayMPC.py  SyncplayMplayer.py  __init__.py  ass2messages.py  bot.py  client.py  clientManager.py  constants.py  ep_client.py  ep_server.py  ircBot.py  localtesting.py  messages.py  messages2ass.py  messages_de.py  messages_en.ass  messages_en.py  messages_eo.py  messages_es.py  messages_fi.py  messages_fr.ass  messages_fr.py  messages_it.py  messages_ko.py  messages_pl_PL.py  messages_pt_BR.py  messages_pt_PT.py  messages_ro.py  messages_ru.py  messages_tr.py  messages_zh_CN.py  mpc_api.py  network_utils.py  protocols.py  server.py  util.py  utils.py  watched.py  webapi.py
syncplay/messages/: __init__.py  messages_es.py  messages_fr.py  messages_ko.py  messages_pt_BR.py  messages_pt_PT.py  messages_ru.py  messages_tr.py
syncplay/players/: __init__.py  basePlayer.py  httpPlayer.py  iina.py  ipc_iina.py  memento.py  mpc.py  mpc_using_api.py  mpcbe.py  mplayer.py  mpv.py  mpvnet.py  playerFactory.py  vlc.py
syncplay/players/python_mpv_jsonipc/: docs.md  python_mpv_jsonipc.py  setup.py
syncplay/pyonfx/: Untitled.ass  __init__.py  ass_core.py  convert.py  font_utility.py  shape.py  utils.py
syncplay/resources/: icon.icns  macOS_dmg_bkg.tiff  spinner.mng  syncplay-server.desktop  syncplay.desktop  syncplayintf.lua  third-party-notices.rtf  third-party-notices.txt
syncplay/resources/lua/intf/: syncplay.lua
syncplay/resources/man/: changelog.md
syncplay/ui/: ConfigurationGetter.py  GuiConfiguration.py  __init__.py  consoleUI.py  gui.py  mainUI.py  sound.py
tests/: conftest.py  test_constants.py  test_protocols.py  test_room.py  test_room_manager.py  test_speed_sync.py  test_utils.py  test_watcher.py
travis/: appimage-deploy.sh  appimage-script.sh  cache-homebrew  cache-python  deb-installation-test.sh  deb-script.sh  download-homebrew  download-python  macos-deploy.sh  macos-install.sh  snapcraft-install.sh
