[metadata]
name = syncplay
version = attr: syncplay.version
author = Syncplay
author_email = dev@syncplay.pl
description = Client/server to synchronize media playback on mpv/VLC/MPC-HC/MPC-BE across many computers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://syncplay.pl/
download_url = https://syncplay.pl/download/
project_urls =
    Source Code = https://github.com/Syncplay/syncplay
    Bug Tracker = https://github.com/Syncplay/syncplay/issues
license_file = LICENSE
classifiers = 
    Development Status :: 5 - Production/Stable
    Environment :: MacOS X :: Cocoa
    Environment :: Win32 (MS Windows)
    Environment :: X11 Applications :: Qt
    Framework :: Twisted
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Natural Language :: English
    Natural Language :: German
    Natural Language :: Italian
    Natural Language :: Russian
    Natural Language :: Spanish
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet
    Topic :: Multimedia :: Video

[options]
include_package_data = True
packages = find:
install_requires =
    twisted[tls]>=16.4.0
    certifi>=2018.11.29
    appnope>=0.1.0; sys_platform == 'darwin'
    pypiwin32>=223; sys_platform == 'win32'
    zope.interface>=4.4.0; sys_platform == 'win32'
    pyside2>=5.11.0
    requests>=2.20.0; sys_platform == 'darwin'
python_requires = >=3.4

[options.entry_points]
console_scripts =
    syncplay-server = syncplay.ep_server:main
gui_scripts = 
    syncplay = syncplay.ep_client:main

